--- a/style/style_for_homework.css
+++ b/style/style_for_homework.css
@@ -16,7 +16,15 @@ body {
 }
 #age {
     margin-top: 40vh;
-    padding: 20px 20px;
+    padding: 20px 20px 20px 20px;
+}
+.button {
+    padding:20px 20px;
+
+}
+.check_day {
+    padding:20px 20px;
+
 }
 
 
